<resources>
    <string name="app_name">Mining calculator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mining_profitability_calculator">Mining profitability calculator</string>
    <string name="enter_hashrate">Enter hashrate</string>
    <string name="h_s">H/s</string>
    <string name="select_your_device">Select your device</string>
    <string name="hashing_power">Hashing Power</string>
    <string name="power_consumption">Power consumption</string>
    <string name="usd">$</string>
    <string name="usd1">USD</string>
    <string name="w">W</string>
    <string name="cost_per_kwh">Cost per KWh</string>
    <string name="pool_fee">Pool fee</string>
    <string name="percent">%</string>
    <string name="calculate">Calculate</string>
    <string name="_2000">2000</string>
    <string name="_200">200</string>
    <string name="_0_1">0.1</string>
    <string name="_1">1</string>
    <string name="select_mining_algo">Select Mining Algo</string>
    <string name="all_other_cryptonight_algos_will_be_auto_calculated">all other cryptonight algos will be auto
        calculated
    </string>
    <string name="calculate_rig">calculate your rig</string>
    <string name="clear_all">clear</string>
    <string name="_0_devices">0 devices</string>
    <string name="build_your_rig">Build your rig:</string>
    <string name="select_vendor">Select vendor</string>
    <string name="dashboard">Dashboard</string>
    <string name="hardware">Hardware</string>
    <string name="coins">Coins</string>
    <string name="home">Home</string>
    <string name="support_project">Support project</string>
    <string name="feedback">Send feedback</string>
    <string name="btc_wallet">bc1q77ghqfdkudpz8tgx4sdmfff5vfex7xzpw6rpkc</string>
    <string name="donation_text">Big thanks to everyone who has supported this free project! If you want to make a
        donation, you can send me email in the feedback section or you can help us by watching Ads.
        Your support is hugely appreciated!
    </string>
    <string name="awesome_donators">Awesome Donators:​</string>
    <string name="app_id">ca-app-pub-1501215034144631~1229746060</string>
    <string name="banner_id">ca-app-pub-1501215034144631/4742326103</string>
    <string name="interstitial_id">ca-app-pub-1501215034144631/8206040347</string>
    <string name="rewarded_id">ca-app-pub-1501215034144631/4203406411</string>
    <string name="load_config">load</string>
    <string name="save_config">save</string>
    <string name="coins_not_found">Coins not found</string>
</resources>
