<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/message"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/select_your_device"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <LinearLayout
            android:id="@+id/deviceSelectorLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp" android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/message"
            android:baselineAligned="false">

        <LinearLayout
                android:id="@+id/gpuLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/GpuImage"
                    android:background="@drawable/gpu_animated"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="8dp"
            />

        </LinearLayout>


        <LinearLayout
                android:id="@+id/cpuLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/CpuImage"
                    android:background="@drawable/cpu_animated"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="8dp"
            />

        </LinearLayout>


    </LinearLayout>

    <Button
            android:id="@+id/algoSelectorButton"
            android:text="Mining Algo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/deviceSelectorLayout"/>


    <EditText
            android:id="@+id/hashrateEditText"
            android:hint="@string/hashing_power"
            android:textAlignment="center"
            android:background="@drawable/edit_text_shape"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="250dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:id="@+id/powerEditText"
            android:hint="@string/power_consumption"
            android:textAlignment="center"
            android:background="@drawable/edit_text_shape"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/hashrateEditText"/>

    <TextView
            android:textSize="18sp"
            android:text="@string/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/powerEditText"
            app:layout_constraintStart_toEndOf="@+id/hashrateEditText"
            android:layout_marginStart="8dp"/>

    <EditText
            android:id="@+id/powerCostEditText"
            android:hint="@string/cost_per_kwh"
            android:textAlignment="center"
            android:background="@drawable/edit_text_shape"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/powerEditText"/>

    <TextView
            android:textSize="18sp"
            android:text="@string/usd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/powerCostEditText"
            app:layout_constraintStart_toEndOf="@+id/hashrateEditText"
            android:layout_marginStart="8dp"/>


    <TextView
            android:textSize="18sp"
            android:text="@string/h_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/hashrateEditText"
            app:layout_constraintStart_toEndOf="@+id/hashrateEditText"
            android:layout_marginStart="8dp"/>

    <EditText
            android:id="@+id/poolFeeEditText"
            android:hint="@string/pool_fee"
            android:textAlignment="center"
            android:background="@drawable/edit_text_shape"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/powerCostEditText"/>

    <TextView
            android:textSize="18sp"
            android:text="@string/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/poolFeeEditText"
            app:layout_constraintStart_toEndOf="@+id/hashrateEditText"
            android:layout_marginStart="8dp"/>


    <android.support.design.widget.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"/>

</android.support.constraint.ConstraintLayout>