<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_gravity="center|top"
            android:scaleType="centerCrop"
            android:background="@drawable/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.538" app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/btcWalletTextView"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/btc_wallet"
            android:padding="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textIsSelectable="true"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <TextView
            android:id="@+id/clickToCopyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="(click to copy)"
            android:textSize="14sp"
            android:gravity="center"
            android:textIsSelectable="true" app:layout_constraintTop_toBottomOf="@+id/btcWalletTextView"
            tools:layout_editor_absoluteX="16dp"/>


    <TextView
            app:layout_goneMarginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/awesome_donators"
            android:gravity="center"
            android:textColor="@color/red_info"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="0dp" android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="20dp"/>

    <TextView
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="★Aectann \n★Seccurit \n★Paladin"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="38dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="20dp"/>

    <TextView
            android:textStyle="bold"
            android:textSize="14sp"
            android:padding="15dp"
            android:text="@string/donation_text"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/clickToCopyTextView"/>


</androidx.constraintlayout.widget.ConstraintLayout>